--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "strict": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
-    "noImplicitReturns": true,
+    "noImplicitReturns": false,                                       // Was true
+    "strictPropertyInitialization": false,                           // New
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
     "declaration": false,
